--- a/new_pages/sampling.rmd
+++ b/new_pages/sampling.rmd
@@ -5,7 +5,7 @@
 Assessing accurately if an intervention (vaccination campaign, distribution of bed nets, etc) reached enough individuals could idealy be done by collecting data from ALL those individuals. For obvious logistical constraints it is impossible in a reasonable amount of time and with limited resources. Drawing a representative sample of the population targeted by the intervention, the target population, is a robust strategy to gather information. It allows us to make reliable inferences on the target population by gathering information on only a portion of it.
 
 ```{r "concept behind drawing sampling", out.width=c('100%', '100%'), echo=FALSE}
-# knitr::include_graphics(here::here("images", "gis_head_image.png"))
+knitr::include_graphics(here::here("images", "sample_schematic.jpg"))
 ```
 
 Sampling strategies to draw a representative sample differ for descriptive studies, typically field surveys assessing the proportion of a population reached by various interventions, or analtyical studies (case control or cohort studies). We will focus on sampling in desciptive studies in this chapter.
@@ -117,7 +117,7 @@ We will not cover non-probability sampling. This type of methods are more often 
 
 In this chapter, we will focus on the sample size calculation for descriptive studies.
 
-Several R packages such as [samplesize4surveys](https://cran.r-project.org/web/packages/samplesize4surveys/index.html) or [samplingbook](https://cran.r-project.org/web/packages/samplingbook/index.html) can help you make such calculations easily. You can also use some online applications (like [here](https://dhsprogram.com/data/survey-sampling-online-tools.cfm)) to keep things simple. However you still need to make choices and sometimes make some assumptions. Those choice and assumptions can be invisible if you just apply a command from a package and do not without fully understanding what is happening. We will here use a parametric approach and explicit the formulae used to highlight the choices you need to make and how they matter. We will then quickly illustrate how to do it using functions from the package [samplingbook](https://cran.r-project.org/web/packages/samplingbook/index.html). [samplesize4surveys](https://cran.r-project.org/web/packages/samplesize4surveys/index.html) provides more functions and is more thorough, but it is also more complex. We will keep it simple and as you will see below: for surveys you can keep it simple as long as you make reasonable choices/assumptions.
+Several R packages such as [samplesize4surveys](https://cran.r-project.org/web/packages/samplesize4surveys/index.html) or [samplingbook](https://cran.r-project.org/web/packages/samplingbook/index.html) can help you make such calculations easily. You can also use some online applications (like [here](https://dhsprogram.com/data/survey-sampling-online-tools.cfm)) to keep things simple. However you still need to make choices and sometimes make some assumptions. Those choice and assumptions can be invisible if you just apply a command from a package and do not without fully understanding what is happening. Here, we will use a parametric approach and explicit the formulae used to highlight the choices you need to make and how they matter. We will then quickly illustrate how to do it using functions from the package [samplingbook](https://cran.r-project.org/web/packages/samplingbook/index.html). [samplesize4surveys](https://cran.r-project.org/web/packages/samplesize4surveys/index.html) provides more functions and is more thorough, but it is also more complex. We will keep it simple and as you will see below: for surveys you can keep it simple as long as you make reasonable choices/assumptions.
 
 For any sample size calculation it is necessary to identify or make decisions on:
 
@@ -242,7 +242,7 @@ p*(1-p)*qnorm(0.975)^2/(delta^2)
 
 # Then we would need to select 246 individuals in our survey if our assumptions are reasonable.
 
-# Let us quickly show how to do to do it with the package samplingbook. This package is associated to a book explaining exactly that: sampling.
+# Let us quickly show how to do to do it with the package samplingbook.
 sample.size.prop(
 	e=0.05, # Here is the precision delta
 	P=0.8, # Here is the expected vaccine coverage
@@ -617,7 +617,7 @@ We refer to these potential sources as "traditional" in opposition to more recen
 Sampling frames do not need to be a simple list (paper or otherwise). Other recent types of data could be really powerful to create a sampling frame in a setting where population displacement occured, or a natural disaster has substantially modified population distribution, or simply because you cannot find "traditional" data sources that are reliable enough. GIS sampling has been used more frequently in recent years to draw samples in complex settings. Although it can appear more complex, in many ways it is often a straigthforward application of SRS but using satellite images, or a map, or another GIS product as a sampling frame. Rather than sampling clusters in villages from a list and then sampling individuals, you might also sample households directly from satellite images that cover those villages. Rather than using a list of villages you have a "list" of roofs on the satellite images and you randomly choose them through random points. The main difference is that the list is not a table in this case, but the principle remains the same.
 
 
-```{r "spatial sampling", echo=TRUE, fig.width=6, fig.height=6, fig.align="center"}
+```{r "spatial sampling", echo=TRUE, fig.width=8, fig.height=6, fig.align="center"}
 # Download the county subdivisions of Hawaii (county of Hawaii).
 hawaii <- county_subdivisions(state="Hawaii", county="Hawaii")
 
@@ -652,7 +652,7 @@ ggplot() +
 		data=sampling_area$osm_polygons,
 		alpha=0.8,
 		color="blue") +
-	geom_sf( # The red points are the ones we randomly sampled.
+	geom_sf( # The bigger red points are the ones we randomly sampled.
 		data=sampled_points,
 		alpha=0.8,
 		color="red") +
@@ -669,10 +669,10 @@ datatable(sampled_points_df, rownames=FALSE)
 
 </center>
 
-In this example, there already are data available for the area we want to sample from (the urban clusters). It is not necessary the case, especially if the area is very remote. It means that you might need to create those boundaries yourself on other GIS softwares first. It can be done on freely available softwares such as [GoogleEath](https://www.google.com/intl/fr/earth/versions/#earth-pro) or [QGIS](https://qgis.org/en/site/forusers/download.html).
+In this example, there already are data available for the area we want to sample from (the urban clusters). It is not necessary the case, especially if it is a remote area. It means that you might need to create those boundaries yourself potentially on other GIS softwares first. It can be done on freely available softwares such as [GoogleEath](https://www.google.com/intl/fr/earth/versions/#earth-pro) or [QGIS](https://qgis.org/en/site/forusers/download.html).
 
-Let us illustrate this procedure simply.
-1. We will use the package [mapedit](https://cran.r-project.org/web/packages/mapedit/index.html) to define a polygon in the same area.
+Let us illustrate this procedure using R.
+1. We will use the package [mapedit](https://cran.r-project.org/web/packages/mapedit/index.html) to define a polygon in the same area (Hawaii).
 
 ```{r "polygon drawing ", echo=TRUE, fig.width=12, fig.height=6, fig.align="center"}
 # Let us create a leaflet object centered on the same area. Leaflet allows you to interact with the map, zoom in, zoom out, and so on.
@@ -690,7 +690,7 @@ leaflet_area <- leaflet() %>%
 # When you are done, click on "Finish".
 # Then click on "Done" on the bottom right.
 
-# Have a quick look at their webpage it you need additional help: https://r-spatial.org/r/2017/06/09/mapedit_0-2-0.html
+# Have a quick look at their webpage if you need additional help: https://r-spatial.org/r/2017/06/09/mapedit_0-2-0.html
 
 polygon <- editMap(leaflet_area)
 # Your polygon is now saved in the object "polygon", more specifically in the slot "finished" of the object polygon.
@@ -699,7 +699,7 @@ polygon <- editMap(leaflet_area)
 2. Now let us randomly draw  100 points in your polygon.
 
 ```{r "point drawing ", echo=TRUE, fig.width=12, fig.height=6, fig.align="center"}
-# Let us just keep the polygon drawn stored in the slot "finished".
+# Let us just keep the polygon that your created. It is stored in the slot "finished".
 polygon <- polygon$finished
 
 # Now we draw the points.
@@ -721,23 +721,25 @@ leaflet() %>%
 	addCircleMarkers(data=random_points)
 ```
 
-
-Unless you drew a small polygon VERY neatly around blocks of houses, it is likely that some points did not fall on roofs. The proportion will increase as the area will get more remote and as the polygon gets simpler, to the point that a majority of the points can fall outside of roofs. One necessary additional step here would be to "clean" the random points to only keep the households with a point on a roof. This will require you to draw more points (probably more than once) to reach your target number of households (+ some additional points to compensate for refusal) as you will need to draw points to replace the ones you removed...and then clean those too and so on.
+Unless you drew a small polygon VERY neatly around blocks of houses, it is likely that some points did not fall on roofs. The proportion will increase as the area will get more remote and as the polygon gets simpler, to the point that a majority of the points can fall outside of roofs. One necessary additional step here would be to "clean" the random points to only keep the ones on a roof. This will require you to draw more points again (probably more than once) to reach your target number of households (with some additional points to compensate for refusal) as you will need to draw points to replace the ones you removed...and then clean those too and so on.
 
 4. You can remove points also using mapedit.
 
 ```{r "quick and dirty look ", echo=TRUE, fig.width=12, fig.height=6, fig.align="center"}
 
-# Draw small polygons around the points not on a roof
+# Draw small polygons around the points not on a roof.
 points_to_clean <- leaflet() %>% 
 					addTiles() %>%
 					addProviderTiles("Esri.WorldImagery") %>%
-					addCircleMarkers(data=random_points)
+					addCircleMarkers(data=random_points) %>%
+					editMap()
 
 # Now we identify only the points outside the polygons you just drew
-not_on_roof <- sapply(st_intersects(random_point, points_to_clean$finished), function(x){length(x)==0})
-# Now we only the others
-cleaned_points <- random_point[not_on_roof,]
+on_roof <- sapply(
+				st_intersects(random_points, points_to_clean$finished),
+				function(x){length(x)==0})
+# Now we only keep those
+cleaned_points <- random_points[on_roof,]
 # Keep in mind that it might be faster to select the points on roofs sometimes.
 
 # Have a quick look with in blue the random points before cleaning and in red what remains after your cleaning
@@ -745,25 +747,25 @@ leaflet() %>%
 	addTiles() %>%
 	addProviderTiles("Esri.WorldImagery") %>%
 	addCircleMarkers(
-		data=random_point,
+		data=random_points,
 		color="red") %>%
 	addCircleMarkers(
 		data=cleaned_points,
 		color="blue") # Only the deleted points will appear red
 ```
 
-Our current approach to check and "clean" the points is convenient but only exploratory at best. The repetition of cleaning and resampling can be tedious. It could require the use of other GIS softwares (some are free and very efficient such as [QGIS](https://www.qgis.org/en/site/) or [GeoDa](https://geodacenter.github.io/)) to be a little faster and/or to start making more complex to streamline every step as much as possible.
+Our current approach to check and "clean" the points is convenient, but it will become cumbersome and time consuming pretty fast for large areas and large sample sizes. The repetition of cleaning and resampling can be tedious. It could require the use of other GIS softwares ([QGIS](https://www.qgis.org/en/site/) or [GeoDa](https://geodacenter.github.io/)) to be a little faster and/or to streamline every step as much as possible.
 
-Sampling GPS point can be very convenient and powerful in areas where very little information is available to make a more traditional sampling frame or simply because you know the available information is unreliable. In areas with large population displacements, it can be easier to find **up-to-date satellite imageries** of the area to draw boundaries and sample households than waiting the demographic data to catch-up with the current situation. However, there are some limitations you should also be aware of:
-* Sampling households by drawing points in a polygon makes the **selection probability proportional to the size of the roof**. We implicitly assume that all the households in the area are roughly of comparable sizes here. This assumption can be reasonable or obviously wrong depending on the setting and the size of the area. Maybe larger households are much larger than the other ones and are also associated with higher incomes (with all the potential confounding biases associated with it), so you should gather some information to ensure that you are not adding an unecessary bias.
-* Selecting households by drawing pointsmeans that a house has as much chance to be selected as a skyscraper with a roof of the same size. People living in the skyscraper would then have a lower selection probability than people in the house if you randomly choose them. So, either you collect data on the number of people/family living in the selected house/skyscraper to weigh the data accordingly and correct for this unequal selection probability or you just avoid using this sampling strategy if there is a strong heterogeneity in the number of floors in the area.
+SOverall, sampling GPS points can be very powerful in areas where very little information is available to make a more "traditional" sampling frame or simply because you know the available information is unreliable. In areas with large population displacements, it can be easier to find **up-to-date satellite imageries** of the area to draw boundaries and sample households than waiting the demographic data to catch-up with the current situation. However, there are some limitations you should also be aware of:
+* Sampling households by drawing points in a polygon makes the **selection probability proportional to the size of the roof**. We implicitly assume that all the households in the area are roughly of comparable sizes. This assumption can be reasonable or obviously wrong depending on the setting and the size of the area. Maybe larger households are much larger than the other ones and are also associated with higher incomes (with all the potential confounding biases associated with it), so you should gather some information to ensure that you are not adding an unecessary bias.
+* Selecting households by drawing points means that a house has as much chance to be selected as a skyscraper with a roof of the same size. People living in the skyscraper would then have a lower selection probability than people in the house if you randomly choose a fixed number of them. So, either you collect data on the number of people/family living in the selected house/skyscraper to weigh the data accordingly and correct for this unequal selection probability, or you just avoid using this sampling strategy if there is a strong heterogeneity in the number of floors in the area.
 * Because the points your draw are randomly selected you might have by chance either very few points on roofs or sometimes more than one on the same roof. You need to decide on a rule that you apply consistently during your "cleaning" phase for those two situations:
 	* For more than 1 point on the same roof you could choose 1 randomly and discard the others.
-	* To minimize the number of points discarded because they are not exactly on a roof, it is not uncommon to use a buffer around the points (20 meters for example could be reasonable). If a roof is within this buffer, then you consider that house as selected. But there is drawback: the bigger the buffer the more isolated households are likely to be selected. Besides, when adding a buffer, more than 1 household might fall in the buffer and you need to decide on a rule to decide which one is selected. Adding a buffer is common. So, deciding on its size is a matter of trade-off (again).
+	* To minimize the number of points discarded because they are not exactly on a roof, it is not uncommon to use a buffer around the points (20 meters for example could be reasonable). If a roof is within this buffer, then you consider that house as selected. But there is drawback: the bigger the buffer the more isolated households are likely to be selected. Besides, when adding a buffer, more than 1 household might fall in it and you then need to decide on a rule to pick one (the closest to the point for example). Adding a buffer is common. So, deciding on its size is a matter of trade-off (again).
 
 Typically, this sampling strategy is very convenient in rural/remote areas because it minimizes the potential issues associated to it and maximizes its advantages over using traditional sampling frameworks. And it often becomes a logical solution after disasters with population displacements. Although it requires some extra GIS skills, it is worth getting some familiarity with it.
 
-This strategy also has logistical advantages: you have the coordinates of all the households you want to select. You just need to put them in GPS devices and dispatch your teams in an organized fashion. You can also SHOW them where they should go using softwares such as [Google Earth](https://www.google.com/intl/fr/earth/versions/#earth-pro). So the practical management of data collection is often simpler. You will need to juggle between different data formats if you want to export those points in GPS devices or smartphones/tablets using a GIS application. Two of the common formats you should be aware of include gpx (commonly used by some GPS devices and some apps such as [maps.me](https://maps.me/)) and kml (commonly used in other apps such as [OsmAnd](https://osmand.net/) or software like [Google Earth](https://www.google.com/intl/fr/earth/versions/)).
+This strategy also has logistical advantages: you have the coordinates of all the households you want to select. You just need to put them in GPS devices and dispatch your teams in an organized fashion. You can also **SHOW** them where they should go using softwares such as [Google Earth](https://www.google.com/intl/fr/earth/versions/#earth-pro). So the practical management of data collection is often simpler. You will need to juggle between different data formats if you want to export those points in GPS devices or smartphones/tablets using a GIS application. Two of the common formats you should be aware of include gpx (commonly used by some GPS devices and some apps such as [maps.me](https://maps.me/)) and kml (commonly used in other apps such as [OsmAnd](https://osmand.net/) or softwares like [Google Earth](https://www.google.com/intl/fr/earth/versions/)).
 
 ```{r "editing kml ang gpx", echo=TRUE, message=FALSE, warning=FALSE, eval=FALSE}
 # Here is how you could save your sampled points into kml points.
@@ -776,12 +778,6 @@ sampled_points %>%
 # This will save the kml in your current working directory. Just adjust the path as needed.
 
 # Here is how you could save your sampled points into gpx.
-# We will convert the sf data into SpatialPointsDataFrame, part of the sp format, as an intermediate step before saving them as gpx.
-# Some packages not on the CRAN would allow you to skip that step, but we will stick to options available on the CRAN.
-sampled_points_sp <-   as(sampled_points, "Spatial") # Here is the conversion to SpatialPointsDataFrame
-# Some functionalities are sometimes more convenient using the sp format so some familiarity with it could be useful.
-# The main difference you might keep in mind between sf and sp formats is that you could see sf data as data.frames with geometry attributes, whereas sp data could be seen as geometry elements with data attributes.
-
 sampled_points %>%
 	mutate(name=paste0("ID-", 1:n())) %>% # Here we define the variable 'name' that will be used to label the points.
 	select(name) %>%
