--- a/bookdown/basics.Rmd
+++ b/bookdown/basics.Rmd
@@ -529,7 +529,7 @@ library(tidyverse)
 
 Think of R as your personal library: When you download a package your library gains a book of functions, but each time you want to use a function in that book, you must borrow that book from your library.  
 
-For clarity in this handbook, functions are usually preceeded by the name of their package using the `::` symbol in the following way:  
+For clarity in this handbook, functions are usually preceded by the name of their package using the `::` symbol in the following way:  
 
 `package_name::function_name()`  
 
@@ -542,7 +542,7 @@ linelist <- rio::import("linelist.xlsx", which = "Sheet1")
 ```
 
 **Dependencies**  
-Packages often depend on other packages, and these are called "dependencies". When a package is installed from CRAN, it will typically also install its dependenices.  
+Packages often depend on other packages, and these are called "dependencies". When a package is installed from CRAN, it will typically also install its dependencies.  
 
 
 
