--- a/new_pages/basics.Rmd
+++ b/new_pages/basics.Rmd
@@ -73,7 +73,7 @@ There are many PDF "cheatsheets" available on the [RStudio website](https://rstu
 -   Factors with **forcats** package\
 -   Dates and times with **lubridate** package\
 -   Strings with **stringr** package\
--   iterative opertaions with **purrr** package\
+-   iterative operations with **purrr** package\
 -   Data import\
 -   Data transformation cheatsheet with **dplyr** package\
 -   R Markdown (to create documents like PDF, Word, Powerpoint...)\
@@ -153,7 +153,7 @@ To see which versions of R, RStudio, or packages were used when this Handbook as
 #### TinyTex {.unnumbered}
 
 TinyTex is a custom LaTeX distribution, useful when trying to produce PDFs from R.\
-See <https://yihui.org/tinytex/> for more informaton.
+See <https://yihui.org/tinytex/> for more information.
 
 To install TinyTex from R:
 
@@ -406,7 +406,7 @@ my_function <- function( ARGUMENTS HERE ){ CODE HERE }
 
 <!-- * `contacts_each = 5` The number contacts enumerated for each case   -->
 
-<!-- * `time_case = 0.5`  Number of hours to complete a case investigaton by phone   -->
+<!-- * `time_case = 0.5`  Number of hours to complete a case investigation by phone   -->
 
 <!-- * `time_contact = 0.25`  Number of hours to complete a contact follow-up by phone   -->
 
