--- a/new_pages/contact_tracing.Rmd
+++ b/new_pages/contact_tracing.Rmd
@@ -2,7 +2,7 @@
 # Contact tracing { }
 
 
-This page demonstrates descriptive analysis of contact tracing data, addessing some key considerations and approaches unique to these kinds of data.  
+This page demonstrates descriptive analysis of contact tracing data, addressing some key considerations and approaches unique to these kinds of data.  
 
 This page references many of the core R data management and visualisation competencies covered in other pages (e.g. data cleaning, pivoting, tables, time-series analyses), but we will highlight examples specific to contact tracing that have been useful for operational decision making. For example, this includes visualizing contact tracing follow-up data over time or across geographic areas, or producing clean Key Performance Indicator (KPI) tables for contact tracing supervisors.
 
