--- a/new_pages/cleaning.Rmd
+++ b/new_pages/cleaning.Rmd
@@ -90,6 +90,7 @@ pacman::p_load(
   here,       # relative file pathways  
   janitor,    # data cleaning and tables
   lubridate,  # working with dates
+  matchmaker, # dictionary-based cleaning
   epikit,     # age_categories() function
   tidyverse   # data management and visualization
 )
