fixed pivoting chapter, id columns

--- a/new_pages/pivoting.Rmd
+++ b/new_pages/pivoting.Rmd
@@ -511,7 +511,7 @@ But less useful for presenting in a table, so let's practice converting this lon
 ```{r}
 df_combined %>% 
   pivot_wider(
-    id_cols = c(Facility, Year, Cases),
+    id_cols = c(Measurement, Facility),
     names_from = "Year",
     values_from = "Cases"
   ) %>% 
