--- a/index.Rmd
+++ b/index.Rmd
@@ -58,7 +58,7 @@ knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x5
 
 **Objective:** Serve as a quick R code reference manual (online and **[offline][Download handbook and data]**) with task-centered examples that address common epidemiological problems.  
 
-**Are you just starting with R?** Try our **[free interactive tutorials](www.appliedepi.org/tutorial)** or synchronous, virtual **[intro course](www.appliedepi.org/live)** used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.  
+**Are you just starting with R?** Try our **[free interactive tutorials](https://www.appliedepi.org/tutorial/)** or synchronous, virtual **[intro course](https://www.appliedepi.org/live/)** used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.  
 
 **Languages:** [Vietnamese (Tiếng Việt)](https://epirhandbook.com/vn/), [Japanese (日本)](https://epirhandbook.com/jp/)  
 
