--- a/new_pages/phylogenetic_trees.Rmd
+++ b/new_pages/phylogenetic_trees.Rmd
@@ -168,6 +168,7 @@ The **%<+%** operator is used to connect the `sample_data` data frame to the `tr
 The most easy annotation of your tree is the addition of the sample names at the tips, as well as coloring of tip points and if desired the branches:
 
 Here is an example of a circular tree: 
+
 ```{r, phylogenetic_trees_adding_sampledata, fig.align='center', warning=F, message=F}
 
 ggtree(tree, layout = "circular", branch.length = 'none') %<+% sample_data + # %<+% adds dataframe with sample data to tree
@@ -381,7 +382,7 @@ p1 # print
 
 Now we can rotate node 37 in object `p1` so that the samples on node 38 move to the top. We store the rotated tree in a new object `p2`.
 ```{r}
-p2 <- rotate(p1, 37) + 
+p2 <- ggtree::rotate(p1, 37) + 
       ggtitle("Rotated Node 37")
 
 
