--- a/new_pages/cleaning.Rmd
+++ b/new_pages/cleaning.Rmd
@@ -37,7 +37,7 @@ Function       | Utility                               | Package
 `case_when()`|re-code values in a column using more complex logical criteria|**dplyr** 
 `replace_na()`, `na_if()`, `coalesce()`|special functions for re-coding|**tidyr**  
 `age_categories()` and `cut()`|create categorical groups from a numeric column|**epikit** and **base** R
-`clean_variable_spelling()`|re-code/clean values using a data dictionary|**linelist**
+`match_df()`|re-code/clean values using a data dictionary|**matchmaker**
 `which()`|apply logical criteria; return indices|**base** R
 
 If you want to see how these functions compare to Stata or SAS commands, see the page on [Transition to R].  
@@ -950,20 +950,40 @@ For example, here we utilize the columns `age` and `age_unit` to create a column
 ```{r}
 linelist <- linelist %>% 
   mutate(age_years = case_when(
-       age_unit == "years"  ~ age,       # if age is given in years
-       age_unit == "months" ~ age/12,    # if age is given in months
+       age_unit == "years"  ~ age,       # if age unit is years
+       age_unit == "months" ~ age/12,    # if age unit is months, divide age by 12
        is.na(age_unit)      ~ age))      # if age unit is missing, assume years
-                                         # any other circumstance, assign NA
+                                         # any other circumstance, assign NA (missing)
 ```
 
 
-As each row in the data is evaluated, the criteria are applied/evaluated in the order the `case_when()` statements are written - from top-to-bottom. If the top criteria evaluates to `TRUE` for a given row, the RHS value is assigned, and the remaining criteria are not even tested for that row. Thus, it is best to write the most specific criteria first, and the most general last.  
+As each row in the data is evaluated, the criteria are applied/evaluated in the order the `case_when()` statements are written - from top-to-bottom. If the top criteria evaluates to `TRUE` for a given row, the RHS value is assigned, and the remaining criteria are not even tested for that row in the data. Thus, it is best to write the most specific criteria first, and the most general last. A data row that does not meet any of the RHS criteria will be assigned `NA`.  
 
 Sometimes, you may with to write a final statement that assigns a value for all other scenarios not described by one of the previous lines. To do this, place `TRUE` on the left-side, which will capture any row that did not meet any of the previous criteria. The right-side of this statement could be assigned a value like "check me!" or missing.  
 
+Below is another example of `case_when()` used to create a new column with the patient classification, according to a case definition for confirmed and suspect cases:  
+
+```{r, eval=F}
+linelist <- linelist %>% 
+     mutate(case_status = case_when(
+          
+          # if patient had lab test and it is positive,
+          # then they are marked as a confirmed case 
+          ct_blood < 20                   ~ "Confirmed",
+          
+          # given that a patient does not have a positive lab result,
+          # if patient has a "source" (epidemiological link) AND has fever, 
+          # then they are marked as a suspect case
+          !is.na(source) & fever == "yes" ~ "Suspect",
+          
+          # any other patient not addressed above 
+          # is marked for follow up
+          TRUE                            ~ "To investigate"))
+```
+
+
 
 <span style="color: red;">**_DANGER:_** **Values on the right-side must all be the same class** - either numeric, character, date, logical, etc. To assign missing (`NA`), you may need to use special variations of `NA` such as `NA_character_`, `NA_real_` (for numeric or POSIX), and `as.Date(NA)`. Read more in [Working with dates].</span>  
-
 
 
 
@@ -1485,8 +1505,7 @@ linelist <- linelist_raw %>%
     mutate(age_years = case_when(
           age_unit == "years" ~ age,
           age_unit == "months" ~ age/12,
-          is.na(age_unit) ~ age,
-          TRUE ~ NA_real_)) %>% 
+          is.na(age_unit) ~ age)) %>% 
   
     # ABOVE ARE UPSTREAM CLEANING STEPS ALREADY DISCUSSED
     ###################################################   
@@ -1790,8 +1809,7 @@ linelist <- linelist_raw %>%
     mutate(age_years = case_when(
           age_unit == "years" ~ age,
           age_unit == "months" ~ age/12,
-          is.na(age_unit) ~ age,
-          TRUE ~ NA_real_)) %>% 
+          is.na(age_unit) ~ age)) %>% 
   
     mutate(
           # age categories: custom
