edited code comments in survey chapter

--- a/new_pages/survey_analysis.Rmd
+++ b/new_pages/survey_analysis.Rmd
@@ -224,7 +224,7 @@ YNVARS <- survey_dict %>%
   ## filter to match the column names of your data
   pull(name) # select yn vars
   
-## change to dates 
+## change to true/false 
 survey_data <- survey_data %>%
   mutate(across(all_of(YNVARS), 
                 str_detect, 
